Content part is added

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    box-sizing: border-box;
+    font-family: 'Roboto';
 }
 
 ul {
@@ -22,7 +22,6 @@ a {
 .hero {
     display: flex;
     flex-direction: column;
-    font-family: 'Roboto';
     background-color: #1F2937;
     padding: 32px 0 96px;
 }
@@ -38,7 +37,7 @@ a {
     justify-content: space-evenly;
 }
 
-.item {
+.hero .item {
     width: 400px;
 }
 
@@ -55,13 +54,13 @@ a {
     color: #f9faf8;
 }
 
-.title {
+.hero .title {
     font-size: 48px;
     font-weight: 900;
     margin-bottom: 24px;
 }
 
-button {
+.hero button {
     background-color: #3882F6;
     border: none;
     color: #f9faf8;
@@ -73,7 +72,31 @@ button {
     border-radius: 12px;
 }
 
-.description {
+.hero .description {
     margin-bottom: 24px;
+}
+
+.content {
+    text-align: center;
+    padding-top: 32px;
+    padding-bottom: 64px;
+}
+
+.content .title {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    margin-bottom: 52px;
+}
+
+.content .info {
+    display: inline-block;
+    max-width: 200px;
+}
+
+.content .container {
+    display: flex;  
+    justify-content: center;
+    gap: 32px;
 }
 
